--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "node server.js",
+    "start-dev": "nodemon"
   },
   "keywords": [],
   "author": "",
